// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#TextInputField() it should display validation errors 1`] = `
<form
  name="myForm"
  onSubmit={[Function]}
  state={
    Object {
      "username": "a",
    }
  }
>
  <div
    className="form-group"
  >
    <input
      className="form-control "
      name="username"
      onChange={[Function]}
      type="text"
      value="a"
    />
  </div>
</form>
`;

exports[`#TextInputField() should render a single input tag with no bootstrap styles 1`] = `
<form
  onSubmit={[Function]}
  state={
    Object {
      "username": "",
    }
  }
>
  <div
    className="form-group"
  >
    <input
      className="form-control "
      name="username"
      onChange={[Function]}
      type="text"
      value=""
    />
  </div>
</form>
`;

exports[`#TextInputField() should render an input field with the bootstrap styled tags 1`] = `
<form
  onSubmit={[Function]}
  state={
    Object {
      "username": "joe",
    }
  }
>
  <div
    className="form-group"
  >
    <input
      className="form-control "
      name="username"
      onChange={[Function]}
      type="text"
      value="joe"
    />
  </div>
</form>
`;
